Corrected a bug with the selectbox so that it overflows properly.

--- a/wp-content/themes/nextstepmaine-wp-theme/sass/_select-box.scss
+++ b/wp-content/themes/nextstepmaine-wp-theme/sass/_select-box.scss
@@ -56,7 +56,7 @@ div.sbHolder {
 		margin: 5px; padding: 0;
 		width: 100% ;
 		z-index: 1;
-		overflow-y: auto;
+		overflow-y: auto !important ;
 		background-color: $medium-blue ;
 		@include single-box-shadow($medium-gray, 0, 3px, 8px, false, false);
 
